UI / CSS (Fixing Table Layout Issues in PL Plan "Case-by-Case Display" and Adjusting Scroll Width for Other Screens)

--- a/client/src/assets/scss/CostOfSalesResults/CostOfSalesResultsListAndEdit.scss
+++ b/client/src/assets/scss/CostOfSalesResults/CostOfSalesResultsListAndEdit.scss
@@ -7,8 +7,11 @@
             flex-direction: column;
         }
         .costOfSalesResultsList_btn_wrapper{
-            width: 100%; 
-            padding: 10px 30px 10px 30px;
+            max-width: 100%;
+            padding: 10px 30px; 
+            overflow-y :hidden;
+            box-sizing: border-box;
+            width: 100%;
             .costOfSalesResultsList_top_content{
                 position: relative;
                 display: flex;
@@ -87,7 +90,16 @@
                             }
                             scrollbar-width: none; 
                         }
+                        .costOfSalesList_table_cont.editScrollable {
+                            overflow-x: auto;
+                            padding: 0px 0px 0px 0px;
+                        }
                         .costOfSalesResultsList_table_cont{
+                            max-height: 100%;
+                            overflow-y: auto;
+                            overflow-x: auto;
+                            white-space: nowrap;
+                            scrollbar-width: thin;
                             table{
                                 width: 100%;
                                 .costOfSalesResultsList_table_title{
