--- a/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
+++ b/client/src/assets/scss/EmployeeExpenses/EmployeeExpensesList.scss
@@ -7,8 +7,12 @@
             flex-direction: column;
         }
         .employeeExpensesList_wrapper_div{
-                    width: 100%; // i do not know wjy but it breaks if i set to 100% // Updates : sets it to 100% and somehow works? 
+
                     padding: 10px 30px 10px 30px;
+                    width: 100%;
+                    max-width: 100%;
+                    overflow-x: hidden;
+                    box-sizing: border-box;
                     .employeeExpensesList_top_content{
                         
                         position: relative;
@@ -92,7 +96,10 @@
                                     padding: 0px 0px 0px 0px;
                                 }
                                 .employeeExpensesList_table_cont{ 
-                                    overflow-x: auto;   
+                                    max-height: 100%;
+                                    overflow-y: auto;
+                                    overflow-x: auto;
+                                    scrollbar-width: thin;
                                     &::-webkit-scrollbar {
                                         width: 8px;
                                     }
