--- a/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
+++ b/client/src/assets/scss/Employees/EmployeesListAndEdit.scss
@@ -96,7 +96,8 @@
                         overflow-x: auto;
                         padding: 0;
                         max-width: 100%; 
-                        box-sizing: border-box; 
+                        box-sizing: border-box;
+                        scrollbar-width: thin;
                     }
                     .EmployeesListAndEdit_table_cont table {
                         width: 100%; 
